# student-grade-calculator

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md
src/: Pesron.cpp  main.cpp
v0.1/: Person.cpp  Person.h  main.cpp  student-grade-calculator
v0.2/: CMakeLists.txt  Makefile  student-grade-calculator
v0.2/data/Students/: students10000.txt  students_10000.txt  students_10000.txt.deque.fail.txt  students_10000.txt.deque.pass.txt  students_10000.txt.list.fail.txt  students_10000.txt.list.pass.txt  students_100000.txt  students_100000.txt.deque.pass.txt  students_100000.txt.list.fail.txt  students_100000.txt.list.pass.txt  students_100000.txt.vector.fail.txt
v0.2/include/: FileGenerator.h  Person.h  Sorter.h  Student.h
v0.2/src/: Analyzer.cpp  FileGenerator.cpp  Person.cpp  Student.cpp  StudentManager.cpp  StudentManager.h  main.cpp
v0.25/: .gitignore  CMakeLists.txt  README.md  student-grade-calculator
v0.25/include/: Analyzer.h  FileGenerator.h  Person.h  Sorter.h  Student.h
v0.25/src/: Analyzer.cpp  ContainerManager.cpp  ContainerManager.h  FileGenerator.cpp  Person.cpp  Person.h  Sorter.cpp  StudentManager.cpp  StudentManager.h  Timer.cpp  Timer.h  main.cpp
v1.0/: .gitignore  CMakeLists.txt  Makefile  README.md  analyzer
v1.0/data/Students/: students1000000.txt
v1.0/include/: Analyzer.h  ExceptionHandlers.h  FileGenerator.h  Person.h  Sorter.h  Student.h
v1.0/src/: Analyzer.cpp  ExceptionHandlers.cpp  FileGenerator.cpp  Person.cpp  Sorter.cpp  Student.cpp  main.cpp
